--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -62,6 +62,7 @@ thiserror = "1.0.56"
 hex = "0.4.3"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+test-log = { version = "0.2.16", default-features = false, features = ["trace"] }
 criterion = "0.5.1"
 libtest-mimic = "0.7.0"
 crossbeam-queue = "0.3.11"
@@ -80,7 +81,12 @@ derive_more = "0.99.17"
 chrono = "0.4.35"
 chrono-tz = "0.9.0"
 saffron = "0.1.0"
-tokio = { version = "1.36.0", features = ["macros", "rt", "net", "rt-multi-thread"] }
+tokio = { version = "1.36.0", features = [
+    "macros",
+    "rt",
+    "net",
+    "rt-multi-thread",
+] }
 libsqlite3-sys = "0.28.0"
 stringzilla = "3.8.4"
 serial_test = { version = "3.1.1", features = ["file_locks"] }
@@ -100,7 +106,7 @@ regex = "1.10.4"
 humansize = { version = "^2.1.2", default-features = false, features = [
     "no_alloc",
 ] }
-reqwest = { version = "0.12.4", default-features = false, features = [
+reqwest = { version = ">=0.0.0, 0.12.4", default-features = false, features = [
     "rustls-tls-native-roots",
     "http2",
     "blocking",
@@ -111,7 +117,14 @@ reqwest = { version = "0.12.4", default-features = false, features = [
     "deflate",
     "hickory-dns",
     "macos-system-configuration",
-] } 
+] }
+mithril-client = { git = "https://github.com/input-output-hk/mithril.git", rev = "5ae2a7c7b0e977627edead521807b374d869ed84", version = "0.8.4", default-features = false, features = [
+    "full",
+] }
+# This crate pulls in the LGPL-3.0+ Rug Library.  If this is a problem we need to modify it upstream to allow selection of numeric backend.
+#mithril-stm = { git = "https://github.com/input-output-hk/mithril.git", rev = "5ae2a7c7b0e977627edead521807b374d869ed84", version = ">=0.0.0, 0.3.22", default-features = false, features = [
+#    "num-integer-backend",
+#] }
 
 tar = "0.4.41"
 flate2 = "1.0.30"
