--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -11,9 +11,7 @@ license.workspace = true
 workspace = true
 
 [dependencies]
-mithril-client = {git = "https://github.com/input-output-hk/catalyst-mithril.git", rev = "3881d48caaf846fb91a64915890fdb47e1e31fa9", version = "0.8.3", default-features = false, features = [
-"full",
-] }
+mithril-client.workspace = true
 
 # This is the only place we use this, so not a workspace dependency.
 turbo-downloader.workspace = true
@@ -33,6 +31,7 @@ async-trait.workspace = true
 [dev-dependencies]
 hex.workspace = true
 tracing-subscriber.workspace = true
+test-log.workspace = true
 
 # Note, these features are for support of features exposed by dependencies.
 [features]
