--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -71,7 +71,6 @@ libtest-mimic = "0.7.0"
 crossbeam-queue = "0.3.11"
 bip39 = "2.0.0"
 iana-time-zone = "0.1.60"
-cryptoxide = "0.4.4"
 rand = "0.8.5"
 bip32 = "0.5.1"
 ed25519-bip32 = "0.4.1"
@@ -96,3 +95,6 @@ console = "0.15.8"
 serde = "1.0"
 serde_json = "1.0"
 jsonschema = "0.18.0"
+hmac = "0.12.1"
+pbkdf2 = "0.12.2"
+sha2 = "0.10"
