add Certificate struct

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -67,6 +67,7 @@ pbkdf2 = { workspace = true }
 sha2 = { workspace = true }
 ed25519 = { workspace = true }
 ed25519-dalek = { workspace = true, features = ["pem"] }
+x509-cert = { workspace = true, features = ["pem"] }
 
 [build-dependencies]
 build-info-build = { workspace = true }
