feat: WASM module package signing [part 1] (#254)
* update sign cli command

* add sign module

* replace crypto oxide crate with RustCrypto crates

* update

* add keys module

* add Certificate struct

* wip

* wip

* add signature payload struct

* wip

* wip

* wip

* remove ununsed ed25519 dep

* fix: bip39 doc

---------

Co-authored-by: Joaquín Rosales <joaquin.rosales@iohk.io>
Co-authored-by: bkioshn <bkioshn@gmail.com>

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -37,7 +37,6 @@ criterion = { workspace = true, optional = true }
 libtest-mimic = { workspace = true }
 crossbeam-queue = { workspace = true }
 bip39 = { workspace = true, features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
-cryptoxide = { workspace = true }
 rand = { workspace = true }
 bip32 = { workspace = true }
 ed25519-bip32 = { workspace = true }
@@ -63,12 +62,17 @@ console = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 jsonschema = { workspace = true }
+hex = { workspace = true }
+hmac = { workspace = true }
+pbkdf2 = { workspace = true }
+sha2 = { workspace = true }
+ed25519-dalek = { workspace = true, features = ["pem"] }
+x509-cert = { workspace = true, features = ["pem"] }
 
 [build-dependencies]
 build-info-build = { workspace = true }
 
 [dev-dependencies]
-hex = { workspace = true }
 tracing-subscriber = { workspace = true }
 serial_test = { workspace = true }
 temp-dir = "0.1.13"
