--- a/hermes/crates/hermes-ipfs/Cargo.toml
+++ b/hermes/crates/hermes-ipfs/Cargo.toml
@@ -16,4 +16,8 @@ libipld.workspace = true
 rust-ipfs.workspace = true
 
 [dev-dependencies]
+# Dependencies used by examples
+clap = { workspace = true, features = ["derive"] }
 tokio.workspace = true
+tracing-subscriber.workspace = true
+rustyline-async.workspace = true
