--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -30,7 +30,7 @@ deny = [
     { crate = "openssl-sys", use-instead = "rustls" },
     "libssh2-sys",
     # { crate = "cmake", use-instead = "cc" },
-    { crate = "windows", reason = "bloated and unnecessary", use-instead = "ideally inline bindings, practically, windows-sys" },
+    # { crate = "windows", reason = "bloated and unnecessary", use-instead = "ideally inline bindings, practically, windows-sys" },
 ]
 skip = [
     # { crate = "bitflags@1.3.2", reason = "https://github.com/seanmonstar/reqwest/pull/2130 should be in the next version" },
@@ -73,6 +73,7 @@ allow = [
     "CC0-1.0",
     "ISC",
     "Unicode-3.0",
+    "MPL-2.0",
 ]
 exceptions = [
     #{ allow = ["Zlib"], crate = "tinyvec" },
