--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -150,3 +150,4 @@ bytesize = "1.3.0"
 
 async-compression = { version = "0.4.11", features = ["tokio","zstd"] }
 tokio-tar = "0.3.1"
+humantime = "2.1.0"
