--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -34,6 +34,7 @@ futures.workspace = true
 bytesize.workspace = true
 async-compression.workspace = true
 tokio-tar.workspace = true
+humantime.workspace = true
 
 [dev-dependencies]
 hex.workspace = true
