--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -151,3 +151,6 @@ bytesize = "1.3.0"
 async-compression = { version = "0.4.11", features = ["tokio","zstd"] }
 tokio-tar = "0.3.1"
 humantime = "2.1.0"
+crossbeam-skiplist = "0.1.3"
+strum = "0.26.2"
+strum_macros = "0.26.2"
