--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "bin",
     "crates/cardano-chain-follower",
+    "crates/hermes-ipfs",
 ]
 
 [workspace.package]
@@ -100,3 +101,6 @@ blake2b_simd = "1.0.2"
 sha2 = "0.10"
 ed25519-dalek = "2.1.1"
 x509-cert = "0.2.5"
+libipld = "0.16.0"
+rust-ipfs = "0.11.19"
+rustyline-async = "0.4.2"
