--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -101,6 +101,7 @@ blake2b_simd = "1.0.2"
 sha2 = "0.10"
 ed25519-dalek = "2.1.1"
 x509-cert = "0.2.5"
+coset = "0.3.7"
 libipld = "0.16.0"
 rust-ipfs = "0.11.19"
 rustyline-async = "0.4.2"
