--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -53,6 +53,7 @@ missing_docs_in_private_items = "deny"
 pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
 # specific commit from the `catalyst` branch
 pallas-hardano = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
+pallas-crypto = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
 
 cardano-chain-follower = { path = "crates/cardano-chain-follower", version = "0.1.0" }
 #turbo-downloader = { path = "crates/turbo-downloader", version = "0.1.0" }
@@ -61,6 +62,7 @@ wasmtime = "20.0.2"
 rusty_ulid = "2.0.0"
 anyhow = "1.0.71"
 blake2b_simd = "1.0.2"
+blake3 = { version = "1.5.1", features = ["rayon","mmap"] }
 hex-literal = "0.4.1"
 thiserror = "1.0.56"
 hex = "0.4.3"
@@ -78,7 +80,7 @@ cryptoxide = "0.4.4"
 rand = "0.8.5"
 bip32 = "0.5.1"
 ed25519-bip32 = "0.4.1"
-dashmap = "5.5.3"
+dashmap = "6.0.1"
 once_cell = "1.19.0"
 clap = "4.5.3"
 build-info = "0.0.36"
@@ -115,7 +117,7 @@ regex = "1.10.4"
 humansize = { version = "^2.1.2", default-features = false, features = [
     "no_alloc",
 ] }
-reqwest = { version = ">=0.0.0, 0.12.4", default-features = false, features = [
+reqwest = { version = ">=0.0.0, 0.12.5", default-features = false, features = [
     "rustls-tls-native-roots",
     "http2",
     "blocking",
@@ -154,3 +156,5 @@ humantime = "2.1.0"
 crossbeam-skiplist = "0.1.3"
 strum = "0.26.2"
 strum_macros = "0.26.2"
+rayon  = "1.10.0"
+ignore = "0.4.22"
