--- a/hermes/Justfile
+++ b/hermes/Justfile
@@ -22,5 +22,5 @@ test-mithril-download:
 
 # Run long running developer test for mithril downloading.
 run-mithril-download-example:
-    RUST_LOG="error,cardano_chain_follower=debug,turbo-downloader=debug,mithril-client=debug" \
-    cargo run --package cardano-chain-follower --example follow_chains -- --mainnet
+    RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
+    cargo run --package cardano-chain-follower --example follow_chains -- --preprod
