--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -1,10 +1,6 @@
 [workspace]
 resolver = "2"
-members = [
-    "bin",
-    "crates/cardano-chain-follower",
-    "crates/hermes-ipfs",
-]
+members = ["bin", "crates/cardano-chain-follower", "crates/hermes-ipfs"]
 
 [workspace.package]
 edition = "2021"
@@ -62,7 +58,7 @@ wasmtime = "20.0.2"
 rusty_ulid = "2.0.0"
 anyhow = "1.0.71"
 blake2b_simd = "1.0.2"
-blake3 = { version = "1.5.1", features = ["rayon","mmap"] }
+blake3 = { version = "1.5.1", features = ["rayon", "mmap"] }
 hex-literal = "0.4.1"
 thiserror = "1.0.56"
 hex = "0.4.3"
@@ -95,7 +91,7 @@ tokio = { version = "1.36.0", features = [
     "rt-multi-thread",
     "process",
 ] }
-tokio-util = { version = "0.7.11", features  = ["codec"] }
+tokio-util = { version = "0.7.11", features = ["codec"] }
 tokio-stream = "0.1.15"
 libsqlite3-sys = "0.29.0"
 stringzilla = "3.8.4"
@@ -137,25 +133,19 @@ mithril-client = { git = "https://github.com/input-output-hk/mithril.git", rev =
 #] }
 
 bytes = "1.6.0"
-
 tar = "0.4.41"
-flate2 = "1.0.30"
-bzip2 = "^0.4.3"
-lz4_flex = "0.11.3"
-xz2 = "^0.1.7"
 zstd = "0.13.1"
 async-trait = "0.1.80"
 dirs = "5.0.1"
 futures = "0.3.30"
 bytesize = "1.3.0"
-
-async-compression = { version = "0.4.11", features = ["tokio","zstd"] }
+async-compression = { version = "0.4.11", features = ["tokio", "zstd"] }
 tokio-tar = "0.3.1"
 humantime = "2.1.0"
 crossbeam-skiplist = "0.1.3"
 strum = "0.26.2"
 strum_macros = "0.26.2"
-rayon  = "1.10.0"
+rayon = "1.10.0"
 ignore = "0.4.22"
 hmac = "0.12.1"
 pbkdf2 = "0.12.2"
