fix(ci): WIP updates for cargo deny configuration

--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -17,8 +17,8 @@ targets = [
 [advisories]
 version = 2
 ignore = [
-    { id = "RUSTSEC-2020-0168", reason = "`mach` is used by wasmtime and we have no control over that." },
-    { id = "RUSTSEC-2021-0145", reason = "we don't target windows, and don't use a custom global allocator." },
+    # { id = "RUSTSEC-2020-0168", reason = "`mach` is used by wasmtime and we have no control over that." },
+    # { id = "RUSTSEC-2021-0145", reason = "we don't target windows, and don;t use a custom global allocator." },
 ]
 
 [bans]
@@ -53,13 +53,13 @@ allow-git = [
     "https://github.com/input-output-hk/catalyst-pallas.git",
     "https://github.com/bytecodealliance/wasmtime",
     "https://github.com/aldanor/hdf5-rust",
-    "https://github.com/input-output-hk/catalyst-mithril.git",
+    "https://github.com/input-output-hk/catalyst-mithril.git"
 ]
 
 [licenses]
 version = 2
 # Don't warn if a listed license isn't found
-unused-allowed-license = "allow"
+unused-allowed-license="allow"
 # We want really high confidence when inferring licenses from text
 confidence-threshold = 0.93
 allow = [
@@ -77,9 +77,7 @@ allow = [
     "MPL-2.0",
 ]
 exceptions = [
-    { allow = [
-        "OpenSSL",
-    ], crate = "ring" }, # OpenSSL license is permissive, but be explicit about where we accept it.
+    { allow = ["OpenSSL"], crate = "ring" }, # OpenSSL license is permissive, but be explicit about where we accept it.
 ]
 
 [[licenses.clarify]]
@@ -104,8 +102,16 @@ license-files = [{ path = "LICENSE", hash = 0xbd0eed23 }]
 # license, for third_party/fiat, which, unlike other third_party directories, is
 # compiled into non-test libraries, is included below."
 # OpenSSL - Obviously
+#expression = "ISC AND MIT AND OpenSSL"
+#license-files = [{ path = "LICENSE", hash = 0xbd0eed23 }]
 
 #[[licenses.clarify]]
-#crate = "rug"
-#expression = "LGPL-3.0"
+#crate = "webpki"
+#expression = "ISC"
+#license-files = [{ path = "LICENSE", hash = 0x001c7e6c }]
+
+# Actually "ISC-style"
+#[[licenses.clarify]]
+#crate = "rustls-webpki"
+#expression = "ISC"
 #license-files = [{ path = "LICENSE", hash = 0x001c7e6c }]
