--- a/hermes/crates/hermes-ipfs/Cargo.toml
+++ b/hermes/crates/hermes-ipfs/Cargo.toml
@@ -14,6 +14,7 @@ workspace = true
 anyhow.workspace = true
 libipld.workspace = true
 rust-ipfs.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 # Dependencies used by examples
