update app manifest and metadata schemas

--- a/hermes/schemas/example/hermes_app_manifest.json
+++ b/hermes/schemas/example/hermes_app_manifest.json
@@ -1,5 +1,6 @@
 {
     "$schema": "https://raw.githubusercontent.com/input-output-hk/hermes/main/hermes/schemas/hermes_app_manifest.schema.json",
+    "icon": "file://icon.svg",
     "metadata": "file://metadata.json",
     "modules": [
         {
