--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -60,6 +60,8 @@ num_cpus = { workspace = true }
 console = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+hyper = { version = "0.14.10", features = ["full"] }
+
 jsonschema = { workspace = true }
 hex = { workspace = true }
 hmac = { workspace = true }
