fix(hermes-lib): Decouple the follower from the chain sync properly.

--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -38,6 +38,8 @@ strum.workspace = true
 blake3.workspace = true
 ignore.workspace = true
 ouroboros.workspace = true
+hex.workspace = true
+rayon.workspace = true
 
 [dev-dependencies]
 hex.workspace = true
@@ -54,36 +56,29 @@ default = ["rustls-tls-native-roots"]
 native-tls = [
     "reqwest/native-tls",
     "mithril-client/native-tls",
-    #"turbo-downloader/native-tls",
 ]
 native-tls-alpn = [
     "reqwest/native-tls-alpn",
     "mithril-client/native-tls-alpn",
-    #"turbo-downloader/native-tls-alpn",
 ]
 native-tls-vendored = [
     "reqwest/native-tls-vendored",
     "mithril-client/native-tls-vendored",
-    #"turbo-downloader/native-tls-vendored",
 ]
 
 rustls-tls = [
     "reqwest/rustls-tls",
     "mithril-client/rustls-tls",
-    #"turbo-downloader/rustls-tls",
 ]
 rustls-tls-manual-roots = [
     "reqwest/rustls-tls-manual-roots",
     "mithril-client/rustls-tls-manual-roots",
-    #"turbo-downloader/rustls-tls-manual-roots",
 ]
 rustls-tls-webpki-roots = [
     "reqwest/rustls-tls-webpki-roots",
     "mithril-client/rustls-tls-webpki-roots",
-    #"turbo-downloader/rustls-tls-webpki-roots",
 ]
 rustls-tls-native-roots = [
     "reqwest/rustls-tls-native-roots",
     "mithril-client/rustls-tls-native-roots",
-    #"turbo-downloader/rustls-tls-native-roots",
 ]
