fix(hermes-lib): Chain follower sync seems to work without issues on rollbacks

--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -40,6 +40,8 @@ ignore.workspace = true
 ouroboros.workspace = true
 hex.workspace = true
 rayon.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 
 [dev-dependencies]
 hex.workspace = true
