fix(hermes-lib): Use the mimalloc allocator.  Increase decompression buffer size.

--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -42,6 +42,7 @@ hex.workspace = true
 rayon.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+mimalloc.workspace = true
 
 [dev-dependencies]
 hex.workspace = true
