--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -67,7 +67,6 @@ test-log = { version = "0.2.16", default-features = false, features = [
 ] }
 criterion = "0.5.1"
 libtest-mimic = "0.7.0"
-crossbeam-queue = "0.3.11"
 bip39 = "2.0.0"
 iana-time-zone = "0.1.60"
 rand = "0.8.5"
@@ -79,7 +78,7 @@ clap = "4.5.3"
 build-info = "0.0.37"
 build-info-build = "0.0.37"
 derive_more = "0.99.17"
-chrono = "0.4.35"
+chrono = "0.4.38"
 chrono-tz = "0.9.0"
 saffron = "0.1.0"
 tokio = { version = "1.36.0", features = [
@@ -129,7 +128,7 @@ mithril-client = { git = "https://github.com/input-output-hk/mithril.git", rev =
 #mithril-stm = { git = "https://github.com/input-output-hk/mithril.git", rev = "5ae2a7c7b0e977627edead521807b374d869ed84", version = ">=0.0.0, 0.3.22", default-features = false, features = [
 #    "num-integer-backend",
 #] }
-
+mimalloc = "0.1.43"
 bytes = "1.6.0"
 tar = "0.4.41"
 zstd = "0.13.1"
@@ -140,7 +139,9 @@ bytesize = "1.3.0"
 async-compression = { version = "0.4.11", features = ["tokio", "zstd"] }
 tokio-tar = "0.3.1"
 humantime = "2.1.0"
+crossbeam-queue = "0.3.11"
 crossbeam-skiplist = "0.1.3"
+crossbeam-channel = "0.5.13"
 strum = "0.26.2"
 strum_macros = "0.26.2"
 rayon = "1.10.0"
