fix: use new type for gossip message id

--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -105,5 +105,6 @@ ed25519-dalek = "2.1.1"
 x509-cert = "0.2.5"
 coset = "0.3.7"
 libipld = "0.16.0"
+libp2p = "0.53.2"
 rust-ipfs = "0.11.19"
 rustyline-async = "0.4.2"
