--- a/hermes/Justfile
+++ b/hermes/Justfile
@@ -22,5 +22,12 @@ test-mithril-download:
 
 # Run long running developer test for mithril downloading.
 run-mithril-download-example:
+    cargo build -r --package cardano-chain-follower --example follow_chains --features mimalloc
     RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
-    cargo run --package cardano-chain-follower --example follow_chains -- --preprod
+    ./target/release/examples/follow_chains --preprod 
+
+# Run long running developer test for mithril downloading.
+debug-heap-mithril-download-example:
+    cargo build --package cardano-chain-follower --example follow_chains
+    RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
+    heaptrack ./target/debug/examples/follow_chains --preprod
