rename manifest "file" field to "package"

--- a/hermes/schemas/example/hermes_app_manifest.json
+++ b/hermes/schemas/example/hermes_app_manifest.json
@@ -4,15 +4,15 @@
     "metadata": "file://metadata.json",
     "modules": [
         {
-            "file": "file://modules/counter.hmod"
+            "package": "file://modules/counter.hmod"
         },
         {
-            "file": "file://modules/counter.hmod",
+            "package": "file://modules/counter.hmod",
             "name": "counter1",
             "config": "file://modules/counter1/config.json"
         },
         {
-            "file": "file://modules/counter.hmod",
+            "package": "file://modules/counter.hmod",
             "name": "counter2",
             "config": "file://modules/counter2/config.json",
             "share": "file://modules/counter2/share"
