feat: Implement Hermes IPFS runtime extension functionality (#272)
* feat(wit): Add bindings for hermes-ipfs

* feat(wit): add exports_hermes_ipfs_event_on_topic to stub-module.c

* feat(wip): add stubbed ipfs::api::Host implementation and on-topic event

* fix: update integration test modules

* feat: add ipfs runtime context

* fix: lints

* fix: update rust integration test modules

* chore: update project dictionary

* fix: pubsub-message includes topic

* fix: update IPFS WIT bindings

* fix: add errors and types, peer-evict function

* fix: typo

* chore: format code

* chore: add hermes-ipfs to deps

* chore: add docs to show how to start ipfs node

* feat: add methods to publish/get/pin files

* feat: add unsubscribe method, return friendlier types

* feat(wip): implement ipfs methods

* chore: format code and remove unused dep

* fix: add peer_evict method to Host implementation

* chore: format code

* fix: remove dup function

* feat: keep track of ipfs files belonging to apps

* send app name to hermes ipfs functions

* fix: remove unused import, update event.wit

* fix: remove unused import, update event.wit

* fix: update IPFS WIT bindings

* feat: implement IPFS api

* feat: add pubsub-publish to IPFS wasi definitions

* fix: cleanup WIT type definitions

* feat: add integration testing for IPFS runtime extension

* fix: update rte and add ipfs tests to earthly target

* fix: update hermes-ipfs example to handle content already pinned

* fix: remove re-exports

* fix: type_lenght_limit to build doctests

* chore: refactor 'mod task' out of state

* fix: types for pubsub-publishing

* fix: add publishing implementation

* chore: update docs

* wip: publish

* fix: cleanup code

* remove lint attributes
* DRY code
* improve docs

* fix: refactor ipfs api into its own module

* fix: simplify type usage

* fix: use new type for gossip message id

* fix: spelling


--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -58,6 +58,8 @@ pallas-hardano = { git = "https://github.com/input-output-hk/catalyst-pallas.git
 
 cardano-chain-follower = { path = "crates/cardano-chain-follower", version = "0.0.1" }
 
+hermes-ipfs = { path = "crates/hermes-ipfs", version = "0.0.1" }
+
 wasmtime = "20.0.2"
 rusty_ulid = "2.0.0"
 anyhow = "1.0.71"
@@ -103,5 +105,6 @@ ed25519-dalek = "2.1.1"
 x509-cert = "0.2.5"
 coset = "0.3.7"
 libipld = "0.16.0"
+libp2p = "0.53.2"
 rust-ipfs = "0.11.19"
 rustyline-async = "0.4.2"
