--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -89,6 +89,7 @@ tokio = "1.36.0"
 libsqlite3-sys = "0.28.0"
 stringzilla = "3.8.4"
 serial_test = { version = "3.1.1", features = ["file_locks"] }
+temp-dir = "0.1.13"
 hdf5 = { git="https://github.com/aldanor/hdf5-rust.git", rev="694e900972fbf5ffbdd1a2294f57a2cc3a91c994", version="0.8.1", features = [ "static", "blosc" ]}
 # needs to enable blosc compression functionality for hdf5 crate
 blosc-src = { version = "0.3.0", features = ["lz4", "zlib", "zstd"] }
@@ -108,3 +109,4 @@ libipld = "0.16.0"
 libp2p = "0.53.2"
 rust-ipfs = "0.11.19"
 rustyline-async = "0.4.2"
+dirs = "5.0.1"
