--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -61,6 +61,7 @@ console = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 hyper = { version = "0.14.10", features = ["full"] }
+dirs = { workspace = true }
 
 jsonschema = { workspace = true }
 hex = { workspace = true }
@@ -79,7 +80,7 @@ build-info-build = { workspace = true }
 [dev-dependencies]
 tracing-subscriber = { workspace = true }
 serial_test = { workspace = true }
-temp-dir = "0.1.13"
+temp-dir = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["blosc-src"]
