--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -159,3 +159,7 @@ libp2p = "0.53.2"
 rust-ipfs = "0.11.19"
 rustyline-async = "0.4.2"
 ouroboros = "0.18.4"
+memx = "0.1.32"
+fmmap = {version = "0.3.3", features = ["sync", "tokio-async"]}
+minicbor = {version = "0.24.2", features = ["alloc", "derive"]}
+redb = {version = "2.1.1", features = ["cache_metrics"]}
