--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -73,6 +73,7 @@ ed25519-dalek = { workspace = true, features = ["pem"] }
 x509-cert = { workspace = true, features = ["pem"] }
 coset = { workspace = true }
 hermes-ipfs = { workspace = true }
+temp-dir = "0.1.13"
 
 [build-dependencies]
 build-info-build = { workspace = true }
