--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -44,6 +44,8 @@ memx.workspace = true
 fmmap.workspace = true
 minicbor.workspace = true
 heed = {workspace = true, optional = true}
+brotli.workspace = true
+zstd.workspace = true
 
 [dev-dependencies]
 hex.workspace = true
