--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -46,6 +46,7 @@ minicbor.workspace = true
 heed = {workspace = true, optional = true}
 brotli.workspace = true
 zstd.workspace = true
+c509-certificate.workspace = true
 
 [dev-dependencies]
 hex.workspace = true
