--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -28,7 +28,7 @@ bare_urls = "deny"
 unescaped_backticks = "deny"
 
 [workspace.lints.clippy]
-pedantic = "deny"
+pedantic = {level = "deny", priority = -1 }
 unwrap_used = "deny"
 expect_used = "deny"
 exit = "deny"
