feat(regex): valid paths to static files

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -74,6 +74,7 @@ x509-cert = { workspace = true, features = ["pem"] }
 coset = { workspace = true }
 hermes-ipfs = { workspace = true }
 temp-dir = "0.1.13"
+regex = "1.10.5"
 
 [build-dependencies]
 build-info-build = { workspace = true }
