--- a/hermes/crates/hermes-ipfs/Cargo.toml
+++ b/hermes/crates/hermes-ipfs/Cargo.toml
@@ -15,6 +15,7 @@ anyhow.workspace = true
 derive_more.workspace = true
 libipld.workspace = true
 rust-ipfs.workspace = true
+tokio.workspace = true
 
 [dev-dependencies]
 # Dependencies used by examples
