--- a/hermes/crates/hermes-ipfs/Cargo.toml
+++ b/hermes/crates/hermes-ipfs/Cargo.toml
@@ -20,6 +20,9 @@ tokio.workspace = true
 [dev-dependencies]
 # Dependencies used by examples
 clap = { workspace = true, features = ["derive"] }
-tokio.workspace = true
+dirs.workspace = true
 tracing-subscriber.workspace = true
 rustyline-async.workspace = true
+lipsum = "0.9.1"
+ratatui = "0.27.0"
+rand = "0.8.5"
