--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -56,7 +56,7 @@ hermes-ipfs = { path = "crates/hermes-ipfs", version = "0.0.1" }
 
 wasmtime = "23.0.1"
 rusty_ulid = "2.0.0"
-anyhow = "1.0.71"
+anyhow = "1.0.86"
 blake2b_simd = "1.0.2"
 blake3 = { version = "1.5.1", features = ["rayon", "mmap"] }
 hex-literal = "0.4.1"
@@ -165,3 +165,5 @@ fmmap = {version = "0.3.3", features = ["sync", "tokio-async"]}
 minicbor = {version = "0.24.2", features = ["alloc", "derive"]}
 redb = {version = "2.1.1", features = ["cache_metrics"]}
 heed = {version = "0.20.3", features = ["mdb_idl_logn_16", "posix-sem"]}
+brotli = "6.0.0"
+c509-certificate = { git = "https://github.com/input-output-hk/catalyst-voices.git", package = "c509-certificate", branch = "fix/c509-cleanup"}
