--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -42,6 +42,11 @@ mimalloc = {workspace = true, optional = true}
 memx.workspace = true
 fmmap.workspace = true
 minicbor.workspace = true
+heed = {workspace = true, optional = true}
+brotli.workspace = true
+zstd.workspace = true
+c509-certificate.workspace = true
+x509-cert.workspace = true
 
 [dev-dependencies]
 hex.workspace = true
