update rust project config files

--- a/wasm/wasi-hermes-component-adapter/Cargo.toml
+++ b/wasm/wasi-hermes-component-adapter/Cargo.toml
@@ -36,6 +36,8 @@ unescaped_backticks = "deny"
 pedantic = "deny"
 unwrap_used = "deny"
 expect_used = "deny"
+todo = "deny"
+unimplemented = "deny"
 exit = "deny"
 get_unwrap = "deny"
 index_refutable_slice = "deny"
