--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -164,3 +164,4 @@ redb = {version = "2.1.1", features = ["cache_metrics"]}
 heed = {version = "0.20.3", features = ["mdb_idl_logn_16", "posix-sem"]}
 brotli = "6.0.0"
 c509-certificate = { git = "https://github.com/input-output-hk/catalyst-voices.git", package = "c509-certificate", branch = "fix/c509-cleanup"}
+num-traits = "0.2.19"
