feat: Bump cat-ci version, cleanup Rust tests (#323)
* Bump cat-ci version

* update rust project config files

* cleanup rust code

* fix Cargo.toml files

* cleanup tests

* fix

* fix formatting

* cleanup tests

* bump cat-ci version

* intentionally corrupt

* bump cat-ci version to v3.1.23

* fix

--- a/hermes/crates/cardano-chain-follower/testbed/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/testbed/Cargo.toml
@@ -23,9 +23,11 @@ bare_urls = "deny"
 unescaped_backticks = "deny"
 
 [workspace.lints.clippy]
-pedantic = "deny"
+pedantic = { level = "deny", priority = -1 }
 unwrap_used = "deny"
 expect_used = "deny"
+todo = "deny"
+unimplemented = "deny"
 exit = "deny"
 get_unwrap = "deny"
 index_refutable_slice = "deny"
