--- a/hermes/Justfile
+++ b/hermes/Justfile
@@ -20,8 +20,12 @@ test-mithril-download:
     RUST_LOG="error,cardano_chain_follower=debug,turbo-downloader=debug,mithril-client=debug,pallas_hardano=error,h2=error,hickory_resolver=error,hickory_proto=error,rustls=error" \
     cargo test follow::tests::test_follow_preprod -- --show-output --ignored --nocapture
 
+# Format the rust code
+code_format:
+    cargo +nightly fmtfix
+
 # Run long running developer test for mithril downloading.
-run-mithril-download-example:
+run-mithril-download-example: code_format
     cargo build -r --package cardano-chain-follower --example follow_chains --features mimalloc
     RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
     ./target/release/examples/follow_chains --preprod
