--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -64,6 +64,7 @@ thiserror = "1.0.56"
 hex = "0.4.3"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-log = "0.2.0"
 test-log = { version = "0.2.16", default-features = false, features = [
     "trace",
 ] }
@@ -77,9 +78,9 @@ ed25519-bip32 = "0.4.1"
 dashmap = "6.0.1"
 once_cell = "1.19.0"
 clap = "4.5.3"
-build-info = "0.0.37"
-build-info-build = "0.0.37"
-derive_more = "0.99.17"
+build-info = "0.0.38"
+build-info-build = "0.0.38"
+derive_more = "1.0.0"
 chrono = "0.4.38"
 chrono-tz = "0.9.0"
 saffron = "0.1.0"
@@ -153,7 +154,7 @@ ed25519-dalek = "2.1.1"
 x509-cert = "0.2.5"
 coset = "0.3.7"
 libipld = "0.16.0"
-libp2p = "0.53.2"
+libp2p = "0.54.0"
 rust-ipfs = "0.11.19"
 rustyline-async = "0.4.2"
 ouroboros = "0.18.4"
@@ -165,3 +166,4 @@ heed = {version = "0.20.3", features = ["mdb_idl_logn_16", "posix-sem"]}
 brotli = "6.0.0"
 c509-certificate = { git = "https://github.com/input-output-hk/catalyst-voices.git", package = "c509-certificate", branch = "fix/c509-cleanup"}
 num-traits = "0.2.19"
+logcall = "0.1.9"
