--- a/hermes/Justfile
+++ b/hermes/Justfile
@@ -31,6 +31,13 @@ run-mithril-download-example: code_format
     ./target/release/examples/follow_chains --preprod
 
 # Run long running developer test for mithril downloading.
+run-mithril-download-example-mainnet: code_format
+    cargo build -r --package cardano-chain-follower --example follow_chains --features mimalloc
+    RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
+    ./target/release/examples/follow_chains --mainnet --largest-metadata
+
+
+# Run long running developer test for mithril downloading.
 debug-heap-mithril-download-example:
     cargo build --package cardano-chain-follower --example follow_chains
     RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
