--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -50,6 +50,8 @@ x509-cert.workspace = true
 ed25519-dalek.workspace = true
 blake2b_simd.workspace = true
 num-traits.workspace = true
+logcall.workspace = true
+tracing-log.workspace = true
 
 [dev-dependencies]
 hex.workspace = true
