--- a/hermes/Justfile
+++ b/hermes/Justfile
@@ -30,15 +30,20 @@ run-mithril-download-example: code_format
     RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
     ./target/release/examples/follow_chains --preprod
 
+run-mithril-download-example-preview: code_format
+    cargo build -r --package cardano-chain-follower --example follow_chains --features mimalloc
+    RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
+    ./target/release/examples/follow_chains --preview
+
 # Run long running developer test for mithril downloading.
 run-mithril-download-example-mainnet: code_format
     cargo build -r --package cardano-chain-follower --example follow_chains --features mimalloc
     RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
-    ./target/release/examples/follow_chains --mainnet --largest-metadata
-
+    ./target/release/examples/follow_chains --mainnet
 
 # Run long running developer test for mithril downloading.
 debug-heap-mithril-download-example:
     cargo build --package cardano-chain-follower --example follow_chains
     RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
     heaptrack ./target/debug/examples/follow_chains --preprod
+
